--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Rizwan ali",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5"
   }
 }
